Revision history for Perl extension AnyEvent::RabbitMQ

        - Minor test fixes

1.19  Sat Mar 21 16:49:24 GMT 2015
        - Add 'no_ack' as an optional argument to the ->consume method
          (Dave Mueller).
        - Fill in some missing documentation (Moritz Lenz).
1.18  Mon Sep 29 19:36:00 PDT 2014
        - Added the bind_exchange and unbind_exchange methods
          for exchange-exchange bindings.

1.17  Fri Jul 25 14:02:00 PDT 2014
        - Add support for chunking large bodies into multiple AMQP frames,
          allowing the sending of large messages.

1.16  Sat Apr 12 14:42:00 BST 2014
        - Doc fixes (Mark Ellis)
        - Fix leak when calling ->close + tests (Peter Haworth)

1.15  Mon Jul 1 12:35:00 BST 2013
        - Fix paper-bag bug in connection close - calling nonexistent method.

1.14  Fri Jun  7 08:54:00 BST 2013
        - Fix paper-bag bug in heartbeat - always lost heartbeat even on
          active connections
        - on channel close, automatically call on_return callbacks for any
          publishes that are waiting
        - maintain more state around opening and closing to avoid hang/race
          when server sends Close after client does (this is possible!)
        - cope with AMQP quirk that in confirm mode, returned messages are
	  *also* acked/nacked
        - document $channel->publish

1.13  Thu May  2 16:48:58 PDT 2013
        - Require Net::AMQP 0.06 to:
           + Get consume cancel notifications (e.g. queue deletion)
           + Properly encode user-provided header strings that look like numbers
        - Fix race between server-sent and client-sent cancellation.

        - Expect server to send heartbeats as promised.  If it doesn't, go President
            Madagasgar on its ass and SHUT DOWN EVERYTHING.

        - Rearrange many things and weaken many references to eliminate bad circular
            references.  Some circular refs are actually good, though; leave those.
